tests/compile_fail/enums_must_have_a_variant.stderr
error: proc-macro derive panicked
 --> tests/compile_fail/enums_must_have_a_variant.rs:4:10
  |
4 | #[derive(StandardDistribution)]
  |          ^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Cannot derive StandardDistribution for enums with zero variants
